--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,21 @@
+.button {
+  position: absolute;
+  width:90px;
+  left: 0px;
 
+  &:nth-child(1) { top:5px; }
+  &:nth-child(2) { top:75px; }
+  &:nth-child(3) { top:95px; }
+  &:nth-child(4) { top:115px; }
+  &:nth-child(5) { top:135px; }
+  &:nth-child(6) { top:155px; }
+}
+
+.graph-view {
+  position: absolute;
+  top:90px;
+  left: 80px;
+  right: 30px;
+  bottom: 30px;
+}
 
