--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,5 +33,14 @@
   <button class="button" (click)="select('London')">London</button>
   <button class="button" (click)="select('New York City NY')">New York</button>
   <button class="button" (click)="select('Brisbane')">Brisbane</button>
+  <button class="button" (click)="serverList()">Server List</button>
+  <div class="button">
+    Cape Town Servers:
+    <div class="list"
+          *ngFor="let x of serverList()"
+          (click)="selectSponsor(x)">
+      {{x.sponsor}}
+    </div>
+  </div>
 </div>
 
