--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,13 +29,14 @@
 <div class="buttons">
   <h4 class="button">Destination Filter</h4>
   <button class="button" (click)="select('Cape Town')">Cape Town</button>
+  <button class="button" (click)="select('CT')">CT: All</button>
   <button class="button" (click)="select('Johannesburg')">Johannesburg</button>
   <button class="button" (click)="select('London')">London</button>
   <button class="button" (click)="select('New York City NY')">New York</button>
   <button class="button" (click)="select('Brisbane')">Brisbane</button>
   <button class="button" (click)="serverList()">Server List</button>
   <div class="button">
-    Cape Town Servers:
+    <h4>Cape Town Servers</h4>
     <div class="list"
           *ngFor="let x of serverList()"
           (click)="selectSponsor(x)">
